--- a/result.ipynb
+++ b/result.ipynb
@@ -80,15 +80,15 @@
    "source": [
     "# 自作モジュールのインポート\n",
     "\n",
-    "import simulate\n",
-    "import cmaes\n",
+    "import lib.simulate\n",
+    "import lib.cmaes\n",
     "\n",
     "import importlib\n",
-    "importlib.reload(simulate)\n",
-    "importlib.reload(cmaes)\n",
+    "importlib.reload(lib.simulate)\n",
+    "importlib.reload(lib.cmaes)\n",
     "\n",
-    "from simulate import SecondOrderSystem, PID\n",
-    "from cmaes import CMAES\n"
+    "from lib.simulate import SecondOrderSystem, PID\n",
+    "from lib.cmaes import CMAES\n"
    ]
   },
   {
